force-app/main/default/objects/Survey_Response_PE__e/Survey_Response_PE__e.object-meta.xml
<CustomObject>
    <label>Survey Response PE</label>
    <pluralLabel>Survey Responses PE</pluralLabel>
</CustomObject>