force-app/main/default/objects/Survey_Response_PE__e/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>