force-app/main/default/objects/Survey_Response_PE__e/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community</label>
    <type>Checkbox</type>
</CustomField>