force-app/main/default/objects/Survey_Response_PE__e/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>