force-app/main/default/objects/Survey_Response_PE__e/fields/Event_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_ID__c</fullName>
    <label>Event Area ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>