force-app/main/default/objects/Survey_Response_PE__e/fields/Event_Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail_ID__c</fullName>
    <label>Event Detail ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>