force-app/main/default/objects/Survey_Response_PE__e/fields/Event_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Event_Improvement__c</fullName>
    <label>Event Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>