force-app/main/default/objects/Survey_Response_PE__e/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>