force-app/main/default/objects/Survey_Response_PE__e/fields/Household_ID__c.field-meta.xml
<CustomField>
    <fullName>Household_ID__c</fullName>
    <label>Household ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>