force-app/main/default/objects/Survey_Response_PE__e/fields/How_Heard__c.field-meta.xml
<CustomField>
    <fullName>How_Heard__c</fullName>
    <label>How Heard</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>