force-app/main/default/objects/Survey_Response_PE__e/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local</label>
    <type>Checkbox</type>
</CustomField>