force-app/main/default/objects/Survey_Response_PE__e/fields/Marriage_Impact__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Impact__c</fullName>
    <label>Marriage Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>