force-app/main/default/objects/Survey_Response_PE__e/fields/Mission_Other__c.field-meta.xml
<CustomField>
    <fullName>Mission_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mission Other</label>
    <type>Checkbox</type>
</CustomField>