force-app/main/default/objects/Survey_Response_PE__e/fields/Notification_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Channel_Id__c</fullName>
    <label>Notification Channel Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>