force-app/main/default/objects/Survey_Response_PE__e/fields/Prayer_Request__c.field-meta.xml
<CustomField>
    <fullName>Prayer_Request__c</fullName>
    <label>Prayer Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>