force-app/main/default/objects/Survey_Response_PE__e/fields/Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID__c</fullName>
    <label>Registration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>