force-app/main/default/objects/Survey_Response_PE__e/fields/Salvation__c.field-meta.xml
<CustomField>
    <fullName>Salvation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salvation</label>
    <type>Checkbox</type>
</CustomField>