force-app/main/default/objects/Survey_Response_PE__e/fields/Small_Group__c.field-meta.xml
<CustomField>
    <fullName>Small_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Small Group</label>
    <type>Checkbox</type>
</CustomField>