force-app/main/default/objects/Survey_Response_PE__e/fields/Speaker_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Feedback__c</fullName>
    <label>Speaker Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>