force-app/main/default/objects/Survey_Response_PE__e/fields/Speaker_Issues__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Issues__c</fullName>
    <description>Speaker Issues</description>
    <label>Speaker Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>