force-app/main/default/objects/Survey_Response_PE__e/fields/SR_ID__c.field-meta.xml
<CustomField>
    <fullName>SR_ID__c</fullName>
    <label>SR ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>