force-app/main/default/objects/Survey_Response_PE__e/fields/Step_Children__c.field-meta.xml
<CustomField>
    <fullName>Step_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step Children</label>
    <type>Checkbox</type>
</CustomField>