force-app/main/default/objects/Survey_Response_PE__e/fields/Sur_Email__c.field-meta.xml
<CustomField>
    <fullName>Sur_Email__c</fullName>
    <label>Sur Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>