force-app/main/default/objects/Survey_Response_PE__e/fields/Sur_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sur_Last_Name__c</fullName>
    <description>ERT</description>
    <label>Sur Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>