force-app/main/default/objects/Survey_Response_PE__e/fields/Sur_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sur_Phone__c</fullName>
    <label>Sur Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>