force-app/main/default/objects/Survey_Response_PE__e/fields/Sur_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Sur_ZipCode__c</fullName>
    <label>Sur ZipCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>